# DearPyGUI_ResizableChildWindow

./: README.md  demo.py  pyproject.toml  test_smoke.py
src/dearpygui_resizablechildwindow/: __init__.py  _split.py  _wrapper.py
